# sat-save-tools

./: .gitignore  .pre-commit-config.yaml  README.md  commands.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  data_type_request.md  feature_request.md
.github/workflows/: python.yml
data/: conveyor_belts.json  crash_sites.json  free_dropped_items.json  hotbar_path_name_customization_recipes.json  hotbar_path_name_emotes.json  hotbar_path_name_recipes.json  icon_ids.json  items_for_player_inventory.json  mercer_spheres.json  milestone_costs.json  mined_resources.json  miners.json  power_line.json  power_slug.json  power_slugs.json  project_assembly_costs.json  readable_names.json  resource_purity.json  somersloop.json  unlock_paths.json
data/jinja_templates/: main.jinja2
notes/: README.md  objects.md
notes/objects_json/Script/: FactoryGame.FGCentralStorageSubsystem.json  FactoryGame.FGConveyorChainActor.json  FactoryGame.FGDockingStationInfo.json  FactoryGame.FGEmoteShortcut.json  FactoryGame.FGFactoryConnectionComponent.json  FactoryGame.FGFactoryLegsComponent.json  FactoryGame.FGFoliageRemovalSubsystem.json  FactoryGame.FGGameRulesSubsystem.json  FactoryGame.FGHealthComponent.json  FactoryGame.FGHighlightedMarker_MapMarker.json  FactoryGame.FGInventoryComponent.json  FactoryGame.FGInventoryComponentEquipment.json  FactoryGame.FGInventoryComponentTrash.json  FactoryGame.FGItemPickup_Spawnable.json  FactoryGame.FGLightweightBuildableSubsystem.json  FactoryGame.FGMapManager.json  FactoryGame.FGPipeConnectionComponent.json  FactoryGame.FGPipeConnectionComponentHyper.json  FactoryGame.FGPipeConnectionFactory.json  FactoryGame.FGPipeNetwork.json  FactoryGame.FGPipeSubsystem.json  FactoryGame.FGPlayerHotbar.json  FactoryGame.FGPowerCircuit.json  FactoryGame.FGPowerConnectionComponent.json  FactoryGame.FGPowerInfoComponent.json  FactoryGame.FGRailroadTrackConnectionComponent.json  FactoryGame.FGRecipeManager.json  (+9 more)
sat_save_tools/: __init__.py  __main__.py  const.py  data.py  dev.py  env.py  exceptions.py  logger.py  progress.py  satisfactory_save.py  utils.py
sat_save_tools/actions/: players.py
sat_save_tools/cli/: __init__.py  answers.py  export_consts_data.py  find_free_staff.py  generate_markdown.py  html.py  info.py  json.py  objects.py  set_session_name.py  utils.py
sat_save_tools/models/: __init__.py  level.py  level_grouping_grid.py  level_objects.py  object_header.py  object_reference.py  save_file_body.py  save_file_header.py
sat_save_tools/serde/: __init__.py  base.py  deserializer.py  formats.py  serializer.py
tests/: data.py  test_models.py  test_properties.py  test_utils.py
(+200 files in other folders)
